<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context="com.electiva.juan.homerepair.Consultar">


    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView android:text="@string/txt_Consultar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@color/title"
            android:textSize="28sp"
            android:gravity="center_horizontal"
            android:layout_marginTop="30dp" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <EditText android:id="@+id/edtTxtNumSolic"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:hint="@string/edtTxtNumConsu"
            android:inputType="number"
            android:textColorHint="@color/text"
            android:layout_marginTop="40dp"
            android:gravity="center" />
    </LinearLayout>

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:orientation="vertical"
            android:layout_marginTop="30dp">

            <Button android:text="@string/btn_Consultar"
                android:layout_width="fill_parent"
                android:id="@+id/btnConLiquidacion"
                android:layout_height="wrap_content"
                android:background="@drawable/shape"
                android:layout_margin="2.5dp"
                android:textAllCaps="false"
                android:textColor="@color/textColorButton"
                android:onClick="searchQuote"/>

        </LinearLayout>


    </LinearLayout>



</RelativeLayout>
