<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context="com.electiva.juan.homerepair.DetalleSolicitud">

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView android:text="@string/txt_Detalle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="@color/title"
                android:textSize="28sp"
                android:gravity="center_horizontal"
                android:layout_marginTop="30dp" />

        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView android:text="@string/txt_detalle_solicitud"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="@color/text"
                android:textSize="18sp"
                android:layout_marginTop="30dp"
                android:gravity="center"/>
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_weight="0.3">

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textMultiLine"
                android:gravity="top|left"
                android:hint="@string/txt_ingresar_detalle"
                android:textColorHint="@color/text"
                android:layout_marginTop="40dp"
                android:scrollbars="vertical"
                android:id="@+id/edtTxtDetalle"/>

        </LinearLayout>

    </LinearLayout>

</RelativeLayout>
