<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context="com.electiva.juan.homerepair.Calificar">


    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView android:text="@string/txt_Calificar"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="@color/title"
                android:textSize="28sp"
                android:gravity="center_horizontal"
                android:layout_marginTop="30dp" />

        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <RatingBar
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="40dp"
                android:layout_gravity="center"/>
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/txt_opinion_servicio"
                android:textColor="@color/text"
                android:layout_marginTop="40dp"/>
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textMultiLine"
                android:maxLines="5"
                android:gravity="top|left"
                android:hint="@string/txt_ingresar_opinion"
                android:textColorHint="@color/text"
                android:layout_marginTop="10dp"
                android:scrollbars="vertical"/>

        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_marginTop="30dp">

            <Button android:text="@string/btn_Enviar"
                android:layout_width="fill_parent"
                android:id="@+id/btnConSol"
                android:layout_height="wrap_content"
                android:background="@color/accent"
                android:layout_margin="2.5dp"
                android:textAllCaps="false"
                android:textColor="@color/textColorButton"/>

        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/txt_compartir"
                android:textColor="@color/text"
                android:layout_marginTop="40dp"/>
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <ImageView
                android:layout_width="37dp"
                android:layout_height="48dp"
                android:src="@drawable/facebook"
                android:layout_weight="0.25"/>
            <ImageView
                android:layout_width="37dp"
                android:layout_height="48dp"
                android:src="@drawable/twitter"
                android:layout_weight="0.25"/>
            <ImageView
                android:layout_width="37dp"
                android:layout_height="48dp"
                android:src="@drawable/google"
                android:layout_weight="0.25"/>
            <ImageView
                android:layout_width="37dp"
                android:layout_height="48dp"
                android:src="@drawable/tumblr"
                android:layout_weight="0.25"/>
        </LinearLayout>

    </LinearLayout>

</RelativeLayout>
